--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue CDN</title>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+    <!-- using the "vueCDN" id so that our vue app (vueCDN) can have access
+    to it and its childern -->
+    <div id="vueCDN">
+        <h1>{{ heading }}</h1>
+        <div class="center">
+            <h3>Counter</h3>
+            <h2>{{countValue}}</h2>
+            <!-- @click same as v-on:click -->
+            <button @click="countValue++">Addition</button>
+            <button @click="countValue--">Subtract</button>
+        </div>    
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
